@@ -138,6 +138,7 @@ void ruri_show_helps(void)
 	cprintf("{base}  -T, --timens-offset [monotonic] [realtime]...: Set time offset for timens(*12)\n");
 	cprintf("{base}  -b, --background ............................: Fork to background\n");
 	cprintf("{base}  -L, --logfile [file] ........................: Set log file of -b option\n");
+	cprintf("{base}  -X, --deny-syscall [syscall] ................: Deny syscall, use seccomp\n");
 	cprintf("\n");
 	cprintf("{base}Note:\n");
 	cprintf("{base}(*1)  : Will not work for unshare container without PID ns support\n");
